--- a/KarateTournamentManeger/Views/Shared/_Layout.cshtml
+++ b/KarateTournamentManeger/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Turnaments">Turnaments</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Tоurnaments">Tоurnaments</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
