--- a/KarateTournamentManeger/Views/Admin/index.cshtml
+++ b/KarateTournamentManeger/Views/Admin/index.cshtml
@@ -7,5 +7,5 @@
 <p>Избери от следните действия:</p>
 <ul>
     <li><a asp-controller="Admin" asp-action="Tournaments">Управление на турнири</a></li>
-    <li><a asp-controller="Admin" asp-action="Users">Manage Users</a></li>
+    <li><a asp-controller="Admin" asp-action="ManageUsers">Manage Users</a></li>
 </ul>
