--- a/KarateTournamentManeger/Areas/Identity/Pages/Account/Register.cshtml
+++ b/KarateTournamentManeger/Areas/Identity/Pages/Account/Register.cshtml
@@ -37,7 +37,7 @@
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
-        <section>
+        @* <section>
             <h3>Use another service to register.</h3>
             <hr />
             @{
@@ -64,7 +64,7 @@
                     </form>
                 }
             }
-        </section>
+        </section> *@
     </div>
 </div>
 
