--- a/KarateTournamentManeger/Views/Shared/_Layout.cshtml
+++ b/KarateTournamentManeger/Views/Shared/_Layout.cshtml
@@ -22,9 +22,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Tournaments">Tournaments</a>
-                        </li>
                         @if (User.IsInRole("Administrator"))
                         {
                             <li class="nav-item">
@@ -45,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - KarateTournamentManeger - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - KarateTournamentManeger @* - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy *@</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
