--- a/KarateTournamentManeger/Views/Admin/ManageUsers.cshtml
+++ b/KarateTournamentManeger/Views/Admin/ManageUsers.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<KarateTournamentManeger.Models.ViewModels.ManageUsersViewModel>
+﻿@model List<KarateTournamentManager.Models.ViewModels.ManageUsersViewModel>
 
 @{
     ViewData["Title"] = "Manage Users";
