--- a/KarateTournamentManeger/Views/Admin/Tournaments.cshtml
+++ b/KarateTournamentManeger/Views/Admin/Tournaments.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<KarateTournamentManeger.Data.Models.Tournament>
+﻿@model IEnumerable<KarateTournamentManager.Data.Models.Tournament>
 
 @{
     ViewData["Title"] = "Tournaments";
