--- a/KarateTournamentManeger/Views/Admin/Users.cshtml
+++ b/KarateTournamentManeger/Views/Admin/Users.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<KarateTournamentManeger.Models.UserRoleViewModel>
+﻿@model IEnumerable<KarateTournamentManager.Models.UserRoleViewModel>
 
 @{
     ViewData["Title"] = "Manage Users";
