--- a/KarateTournamentManeger/Areas/Identity/Pages/Account/Manage/_ViewImports.cshtml
+++ b/KarateTournamentManeger/Areas/Identity/Pages/Account/Manage/_ViewImports.cshtml
@@ -1,1 +1,1 @@
-﻿@using KarateTournamentManeger.Areas.Identity.Pages.Account.Manage
+﻿@using KarateTournamentManager.Areas.Identity.Pages.Account.Manage
