--- a/KarateTournamentManeger/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/KarateTournamentManeger/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using KarateTournamentManeger.Areas.Identity
-@using KarateTournamentManeger.Areas.Identity.Pages
+@using KarateTournamentManager.Areas.Identity
+@using KarateTournamentManager.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using KarateTournamentManager.Identity
