--- a/KarateTournamentManeger/Views/Shared/_Layout.cshtml
+++ b/KarateTournamentManeger/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - KarateTournamentManager</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/KarateTournamentManeger.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/KarateTournamentManager.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -42,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - KarateTournamentManeger @* - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy *@</a>
+            &copy; 2024 - KarateTournamentManager @* - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy *@</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
