--- a/KarateTournamentManeger/Views/Shared/_TournamentListPartial.cshtml
+++ b/KarateTournamentManeger/Views/Shared/_TournamentListPartial.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<ApplicationUser> UserManager
 
-@model IEnumerable<KarateTournamentManeger.Models.TournamentViewModel>
+@model IEnumerable<KarateTournamentManager.Models.TournamentViewModel>
 
 @{
     var currentUser = await UserManager.GetUserAsync(User);
