--- a/KarateTournamentManeger/Views/_ViewImports.cshtml
+++ b/KarateTournamentManeger/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using KarateTournamentManeger
-@using KarateTournamentManeger.Models
+﻿@using KarateTournamentManager
+@using KarateTournamentManager.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
