--- a/KarateTournamentManeger/Views/Admin/TournamentDetails.cshtml
+++ b/KarateTournamentManeger/Views/Admin/TournamentDetails.cshtml
@@ -9,7 +9,13 @@
     <div class="card-body">
         <p><strong>Описание:</strong> @Model.Description</p>
         <p><strong>Дата:</strong> @Model.Date.ToString("dd/MM/yyyy")</p>
-        <p><strong>Статус:</strong> @Model.Status</p>
+        <p><strong >Статус:</strong>
+            @if (Model.Status.ToString() == "Ongoing")
+            {
+                <strong class="blinking-dot"></strong>
+            }
+            @Model.Status
+        </p>
         <p><strong>Записани участници:</strong> @Model.EnrolledParticipantsCount</p>
     </div>
 </div>
@@ -74,8 +80,7 @@ else
                                 <th>Участник 1</th>
                                 <th>Участник 2</th>
                                 <th>Резултат</th>
-                                <th>Част</th>
-                                <th>Оставащо време</th>
+                                <th>Татами</th>
                                 <th>Статус</th>
                                 <th>Победител</th>
                             </tr>
@@ -87,8 +92,16 @@ else
                                     <td>@match.Participant1Name</td>
                                     <td>@match.Participant2Name</td>
                                     <td>@match.Participant1Score : @match.Participant2Score</td>
-                                    <td>@match.Period</td>
-                                    <td>@match.RemainingTime</td>
+                                    <td>
+                                        @if (match.Tatami == 0)
+                                        {
+                                            <span>Не е определено</span>
+                                        }
+                                        else
+                                        {
+                                            <span>@match.Tatami</span>
+                                        }
+                                    </td>
                                     <td>@match.Status</td>
                                     <td>@(match.WinnerName)</td>
                                 </tr>
@@ -111,8 +124,7 @@ else
         Всички турнири
     </a>
 
-@*     @if (Model.Status.ToString() == "Upcoming" & true) *@
-    @if (true)
+    @if (Model.Status.ToString() == "Upcoming" & Model.EnrolledParticipantsCount > 1)
     {
         <form asp-action="FinalizeEnrollment" asp-controller="Admin" method="post" style="display:inline;" onsubmit="return confirm('Сигурни ли сте, че искате да прекратите записването и да генерирате етапите на турнира?');">
             <input type="hidden" name="tournamentId" value="@Model.Id" />
