Reinvoicing CreateStagesAsync and add Constant.ModelConstants

--- a/KarateTournamentManeger/Views/Shared/_TournamentListPartial.cshtml
+++ b/KarateTournamentManeger/Views/Shared/_TournamentListPartial.cshtml
@@ -38,7 +38,7 @@
                 </td>
                 <td>@tournament.EnrolledParticipantsCount</td>
                 <td>
-                    @if (!isAdmin) // Ако не е администратор, показваме бутоните
+                    @if (!isAdmin)
                     {
                         @if (User.Identity.IsAuthenticated)
                         {
