--- a/KarateTournamentManeger/Areas/Identity/Pages/Account/Register.cshtml
+++ b/KarateTournamentManeger/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Регистрация";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -9,11 +9,16 @@
 <div class="row">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <h2>Създай нов акаунт.</h2>
             <hr />
+            <div class="form-floating mb-3">
+                <input asp-for="Input.ParticipantName" class="form-control" autocomplete="username" aria-required="true" placeholder="Име и фамилия" />
+                <label asp-for="Input.ParticipantName">Име и фамилия</label>
+                <span asp-validation-for="Input.ParticipantName" class="text-danger"></span>
+            </div>
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                <input asp-for="Input.Email" class="form-control" autocomplete="email" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email">Email</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
@@ -27,13 +32,8 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.ParticipantName" class="control-label"></label>
-                <input asp-for="Input.ParticipantName" class="form-control" />
-                <span asp-validation-for="Input.ParticipantName" class="text-danger"></span>
-            </div>
 
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Регистрирай</button>
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
