--- a/KarateTournamentManeger/Views/Shared/_TournamentListPartial.cshtml
+++ b/KarateTournamentManeger/Views/Shared/_TournamentListPartial.cshtml
@@ -19,7 +19,7 @@
             @if (User.IsInRole("Administrator") || User.IsInRole("Participant") || User.IsInRole("TimerManager"))
             {
                 <th>Записани участници</th>
-                <th>Екшън</th>
+                <th>Действия</th>
             }
         </tr>
     </thead>
