--- a/KarateTournamentManeger/Views/Admin/CreateTournament.cshtml
+++ b/KarateTournamentManeger/Views/Admin/CreateTournament.cshtml
@@ -3,28 +3,26 @@
 <h2>Създаване на нов турнир</h2>
 
 <form method="post" asp-action="CreateTournament">
-    <div class="form-group">
-        <label asp-for="Location">Локация</label>
-        <input type="text" asp-for="Location" class="form-control" />
+    <div class="form-group mb-3">
+        <input type="text" asp-for="Location" class="form-control" placeholder="Локация" />
         <span asp-validation-for="Location" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
-        <label asp-for="Description">Описание</label>
-        <textarea asp-for="Description" class="form-control"></textarea>
+    <div class="form-group mb-3">
+        <textarea asp-for="Description" class="form-control" placeholder="Описание"></textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="form-group mb-3">
         <label asp-for="Date">Дата</label>
-        <input type="date" asp-for="Date" class="form-control" />
+        <input type="date" asp-for="Date" class="form-control" placeholder="Дата" />
         <span asp-validation-for="Date" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-primary">Създай турнир</button>
 </form>
 
-<!-- Добавяне на валидатор -->
+
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
