--- a/KarateTournamentManeger/Views/Admin/Users.cshtml
+++ b/KarateTournamentManeger/Views/Admin/Users.cshtml
@@ -43,8 +43,7 @@
                             {
                                 <option value="@role">@role</option>
                             }
-                        </select>
-                        <button type="submit" class="btn btn-danger btn-sm">Remove</button>
+                       @*  <button type="submit" class="btn btn-danger btn-sm">Remove</button> *@
                     </form>
                 </td>
             </tr>
