--- a/KarateTournamentManeger/Views/Shared/_Layout.cshtml
+++ b/KarateTournamentManeger/Views/Shared/_Layout.cshtml
@@ -56,7 +56,12 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Карате турнир мениджър @* - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy *@</a>
+            &copy; 2024 - 
+            @if (@DateTime.Now.Year != 2024)
+            {
+                @DateTime.Now.Year
+            }
+            Карате турнир мениджър @* - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy *@</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
